--- a/package.json
+++ b/package.json
@@ -2,19 +2,31 @@
   "name": "react-bootstrap-minovate",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start1": "react-scripts start",
+    "start": "react-app-rewired start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "bootstrap": "3.3.7",
+    "node-sass": "^4.7.2",
     "node-sass-chokidar": "^0.0.3",
+    "prettier": "^1.10.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.0"
+    "react-scripts": "1.1.0",
+    "sass-loader": "^6.0.6"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "eslint": "^4.17.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-watch": "^3.1.3",
+    "react-app-rewired": "^1.4.1"
   }
 }
