--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "bootstrap": "3.3.7",
     "node-sass": "^4.7.2",
     "node-sass-chokidar": "^0.0.3",
     "prettier": "^1.10.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6"
   },
   "devDependencies": {
